2008-10-17    <neal@bcn.boulder.co.us>

	* electionaudits/varsize.py: 
	add varsize.py for auditing stats - original version from Ron Rivest
	http://people.csail.mit.edu/rivest/pps/varsize.py  with MIT license

	* README (Acknowledgements): 
	Add acknowledgements
	
2008-10-15    <neal@bcn.boulder.co.us>
	rename electionaudit module to electionaudits
	improve README
	
2008-10-15    <neal@bcn.boulder.co.us>

	* makeauditunits.py (main): 
	fix DJANGO_SETTINGS_MODULE bug	
	
2008-10-15    <neal@bcn.boulder.co.us>

	* makeauditunits.py (main): 
	print summary results of tally at end

2008-10-14    <neal@bcn.boulder.co.us>

	* makeauditunits.py (parse_xml_crystal): 
	convert parse_xml_crystal etc to use AuditUnits
	Add "--election" option to name the election.
	(parse_csv): 
	add EarlyVotes

	* electionaudit/models.py (Batch): 
	Change election day abbreviation to "ED", not "EL" (similar to Early)
	Avoid duplicate VoteCount, Batch, ContestBatch via Meta unique_together

2008-10-14    <neal@bcn.boulder.co.us>

	* makeauditunits.py (parse_xml_crystal): 
	finally, create EL and EV database records, now that I can test those
	if xml file is "cumulative.xml", use parent directory name
	
2008-10-13    <neal@bcn.boulder.co.us>

	* makeauditunits.py (main): 
	define settings module without environment var DJANGO_SETTINGS_MODULE
	
2008-10-10    <neal@bcn.boulder.co.us>

	add setup.py and ez_setup.py
	* electionaudit/templates/electionaudit/report.html: 
	don't use writing-mode: tb-rl on vote totals
	* audittools/settings.py: 
	comment out 'lukeplant_me_uk.django.validator' and 'django_extensions'
	Improve documentation
	
2008-10-09    <neal@bcn.boulder.co.us>

	* electionaudit/templates/electionaudit/report.html: 
	sort columns alphabetically to deal with variable order, mismatches
	
2008-10-08    <neal@bcn.boulder.co.us>

	* audittools/templates/base.html: 
	only show /validator/ if in debug mode
	
2008-10-08    <neal@bcn.boulder.co.us>

	Version 0.7.0